--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2525,10 +2525,9 @@ a img {
 }
 
 .site-sidebar {
-  float: left;
+  position: absolute;
   width: 220px;
   margin: 50px 0 50px 40px;
-  position: relative;
 }
 @media screen and (max-width: 1024px) {
   .site-sidebar {
